--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Clases"
         tools:targetApi="31">
         <activity
+            android:name=".juego_adivinanzas"
+            android:exported="false" />
+        <activity
             android:name=".viewActivity1"
             android:exported="false" />
         <activity
