--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Clases"
         tools:targetApi="31">
         <activity
+            android:name=".vistalista"
+            android:exported="false" />
+        <activity
             android:name=".vistaweb"
             android:exported="false" />
         <activity
