--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.clases">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +22,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Clases"
         tools:targetApi="31">
+        <activity
+            android:name=".vistapermisocontactos"
+            android:exported="false" />
+        <activity
+            android:name=".permisos"
+            android:exported="false" />
+        <activity
+            android:name=".detallepais"
+            android:exported="false" />
         <activity
             android:name=".vistalistajson"
             android:exported="false" />
